{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 31,
  "lineage": "573c8454-6e76-cb50-1aa9-e910d400f1f0",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2_1",
      "provider": "module.instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b818a04bc9c2133c",
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:instance/i-038907bb3be65c968",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038907bb3be65c968",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b1dd506ed53252dc"
              }
            ],
            "primary_network_interface_id": "eni-0b1dd506ed53252dc",
            "private_dns": "ip-172-16-3-221.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.221",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bccb177158764a48",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075d8b677ce601bda",
            "tags": {
              "Name": "tf-ec2-1"
            },
            "tags_all": {
              "Name": "tf-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e608381848c899f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "i-038907bb3be65c968",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2_2",
      "provider": "module.instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b818a04bc9c2133c",
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:instance/i-09f4ed08e47c3cd69",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f4ed08e47c3cd69",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03a0e895ef208857d"
              }
            ],
            "primary_network_interface_id": "eni-03a0e895ef208857d",
            "private_dns": "ip-172-16-4-234.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.4.234",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb0eea5e621879fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c96c5b8f7ee2d9bf",
            "tags": {
              "Name": "tf-ec2-2"
            },
            "tags_all": {
              "Name": "tf-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e608381848c899f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "i-09f4ed08e47c3cd69",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf_alb",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/6070f553e7fa16a2",
            "arn_suffix": "app/tf-alb/6070f553e7fa16a2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-alb-1980297129.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/6070f553e7fa16a2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-02e608381848c899f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f40ec8dccd332f7"
              },
              {
                "subnet_id": "subnet-0f320542671c309ba"
              }
            ],
            "subnets": [
              "subnet-00f40ec8dccd332f7",
              "subnet-0f320542671c309ba"
            ],
            "tags": {
              "Name": "tf_alb"
            },
            "tags_all": {
              "Name": "tf_alb"
            },
            "vpc_id": "vpc-04dddfabbfb5920b9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/6070f553e7fa16a2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf_web_listener",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:listener/app/tf-alb/6070f553e7fa16a2/5dd382f3f43ea7d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:listener/app/tf-alb/6070f553e7fa16a2/5dd382f3f43ea7d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:loadbalancer/app/tf-alb/6070f553e7fa16a2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:listener/app/tf-alb/6070f553e7fa16a2/5dd382f3f43ea7d9"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.tf_alb",
            "module.load_balancer.aws_lb_target_group.tf_tg",
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf_tg",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389",
            "arn_suffix": "targetgroup/tf-alb-tg/4be4c69477848389",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf_tg_ec2_att_1",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389-20251217005453698100000002",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389",
            "target_id": "i-038907bb3be65c968"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instance.aws_instance.tf_ec2_1",
            "module.load_balancer.aws_lb_target_group.tf_tg",
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf_tg_ec2_att_2",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389-20251217005453554900000001",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192676124148:targetgroup/tf-alb-tg/4be4c69477848389",
            "target_id": "i-09f4ed08e47c3cd69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instance.aws_instance.tf_ec2_2",
            "module.load_balancer.aws_lb_target_group.tf_tg",
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_nat_eip",
      "provider": "module.route_table.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4f98efec9c5f7aa",
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:elastic-ip/eipalloc-0d4f98efec9c5f7aa",
            "domain": "vpc",
            "id": "eipalloc-0d4f98efec9c5f7aa",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-45-27.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.45.27",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-nat-eip"
            },
            "tags_all": {
              "Name": "tf-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_nat_gw",
      "provider": "module.route_table.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4f98efec9c5f7aa",
            "association_id": "eipassoc-0b8c610620557a677",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-059fd91aa16ff0e6d",
            "network_interface_id": "eni-03fdb6e01aa8ab872",
            "private_ip": "172.16.1.196",
            "public_ip": "3.39.45.27",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f320542671c309ba",
            "tags": {
              "Name": "tf-nat-gw"
            },
            "tags_all": {
              "Name": "tf-nat-gw"
            },
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_eip.tf_nat_eip",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "tf_pri_rt_route",
      "provider": "module.route_table.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b7516e957fe5a351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-059fd91aa16ff0e6d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03b7516e957fe5a35",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03b7516e957fe5a35"
          },
          "dependencies": [
            "module.route_table.aws_eip.tf_nat_eip",
            "module.route_table.aws_nat_gateway.tf_nat_gw",
            "module.route_table.aws_route_table.tf_pri_rt",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pri_rt",
      "provider": "module.route_table.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:route-table/rtb-03b7516e957fe5a35",
            "id": "rtb-03b7516e957fe5a35",
            "owner_id": "192676124148",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "tf-pri-rt"
            },
            "tags_all": {
              "Name": "tf-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "rtb-03b7516e957fe5a35",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pub_rt",
      "provider": "module.route_table.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:route-table/rtb-073632832121af1dd",
            "id": "rtb-073632832121af1dd",
            "owner_id": "192676124148",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea2c6c8a7aeb8e5a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-pub-rt"
            },
            "tags_all": {
              "Name": "tf-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "rtb-073632832121af1dd",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pri_rt_ass",
      "provider": "module.route_table.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sn3_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2c6736fc50ae1fc",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03b7516e957fe5a35",
            "subnet_id": "subnet-075d8b677ce601bda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.tf_pri_rt",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pri_sn4_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0505c0f3f02ff7d66",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03b7516e957fe5a35",
            "subnet_id": "subnet-0c96c5b8f7ee2d9bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.tf_pri_rt",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pub_rt_ass",
      "provider": "module.route_table.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sn1_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0f9eec98cac28d9",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-073632832121af1dd",
            "subnet_id": "subnet-0f320542671c309ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.tf_pub_rt",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn2_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06be337ad1a8e0c17",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-073632832121af1dd",
            "subnet_id": "subnet-00f40ec8dccd332f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.tf_pub_rt",
            "module.subnet.aws_subnet.tf_sn",
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_alb_sg",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group/sg-0bf8db711f88eade3",
            "description": "Allow HTTP, HTTPS",
            "egress": [],
            "id": "sg-0bf8db711f88eade3",
            "ingress": [],
            "name": "tf_alb_sg",
            "name_prefix": "",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-alb-sg"
            },
            "tags_all": {
              "Name": "tf-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sg-0bf8db711f88eade3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_ec2_sg",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group/sg-02e608381848c899f",
            "description": "Allow SSH, HTTP",
            "egress": [],
            "id": "sg-02e608381848c899f",
            "ingress": [],
            "name": "tf_ec2_sg",
            "name_prefix": "",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sg-02e608381848c899f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tf_alb_sg_egress",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-0cd2b0fb4d2aa869c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cd2b0fb4d2aa869c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0bf8db711f88eade3",
            "security_group_rule_id": "sgr-0cd2b0fb4d2aa869c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-0cd2b0fb4d2aa869c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_alb_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tf_ec2_sg_egress",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-08f98ce18d756f4bd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08f98ce18d756f4bd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-02e608381848c899f",
            "security_group_rule_id": "sgr-08f98ce18d756f4bd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-08f98ce18d756f4bd",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_alb_sg_ingress",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-0060687f9cc49096b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0060687f9cc49096b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0bf8db711f88eade3",
            "security_group_rule_id": "sgr-0060687f9cc49096b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-0060687f9cc49096b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_alb_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-04204c8a548a2b041",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04204c8a548a2b041",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0bf8db711f88eade3",
            "security_group_rule_id": "sgr-04204c8a548a2b041",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-04204c8a548a2b041",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_alb_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tf_ec2_sg_ingress",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-01f1aeb4a21de65e6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01f1aeb4a21de65e6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-02e608381848c899f",
            "security_group_rule_id": "sgr-01f1aeb4a21de65e6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-01f1aeb4a21de65e6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:security-group-rule/sgr-0fd675d65ac24770a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fd675d65ac24770a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-02e608381848c899f",
            "security_group_rule_id": "sgr-0fd675d65ac24770a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "sgr-0fd675d65ac24770a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.tf_ec2_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_sn",
      "provider": "module.subnet.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sn3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-075d8b677ce601bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d8b677ce601bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-sn-pri3"
            },
            "tags_all": {
              "Name": "tf-sn-pri3"
            },
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-075d8b677ce601bda",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pri_sn4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-0c96c5b8f7ee2d9bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c96c5b8f7ee2d9bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-sn-pri4"
            },
            "tags_all": {
              "Name": "tf-sn-pri4"
            },
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-0c96c5b8f7ee2d9bf",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-0f320542671c309ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f320542671c309ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-sn-pub1"
            },
            "tags_all": {
              "Name": "tf-sn-pub1"
            },
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-0f320542671c309ba",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:subnet/subnet-00f40ec8dccd332f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f40ec8dccd332f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192676124148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-sn-pub2"
            },
            "tags_all": {
              "Name": "tf-sn-pub2"
            },
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "subnet-00f40ec8dccd332f7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:internet-gateway/igw-0ea2c6c8a7aeb8e5a",
            "id": "igw-0ea2c6c8a7aeb8e5a",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-04dddfabbfb5920b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192676124148:vpc/vpc-04dddfabbfb5920b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-03c2c47b50c6a586e",
            "default_route_table_id": "rtb-0f5eeccadbdd5dc4c",
            "default_security_group_id": "sg-0f53f30b66dfd5fb3",
            "dhcp_options_id": "dopt-0a9813bc501c7365e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04dddfabbfb5920b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5eeccadbdd5dc4c",
            "owner_id": "192676124148",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "192676124148",
            "id": "vpc-04dddfabbfb5920b9",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}